# marketing

./: .env.example  .gitignore  .railwayignore  ALL_CREDENTIALS.md  API_REFERENCE.md  APPLIED_FIXES_SUMMARY.md  ARCHITECTURE.md  AUDIT_REPORT.md  AUDIT_REPORT_FULL.md  AUTHORIZATION_SHEET_SCRIPT.js  BOT_LOGIC.md  CHANGELOG.md  CHANGELOG_V2.md  CHECK_RESULTS.md  CHECK_TUNNEL_URL.md  CLEAN_AUTH_SCRIPT.gs  CONVERSATION_LOG.md  DEBUG_PROMOTIONS.md  DEEP_AUDIT_REPORT.md  DEPLOY_FIXES.md  DNS_WAIT_INSTRUCTIONS.md  Dockerfile  FINAL_AUTH_SCRIPT.gs  FINAL_FIX.sh  FINAL_STATUS.md  FIX_CLOUDFLARE_TUNNEL.md  FIX_DNS_ISSUE.md  FIX_GOOGLE_APPS_SCRIPT.md  FIX_WEBAPP_URL.md  FUNCTION_REFERENCE.md  GOOGLE_APPS_SCRIPT_FULL.js  GOOGLE_APPS_SCRIPT_SETUP.md  HOW_TO_CHECK_DNS.md  IMPROVEMENTS_GUIDE.md  MOBILE_AUTH_DIAGNOSTIC.md  MOBILE_AUTH_FIX.md  MOBILE_AUTH_SCRIPT.md  MOBILE_AUTH_UPDATE.md  OPTIMIZATION_PLAN.md  PROBLEM_SOLVING_METHODOLOGY.md  (+198 more)
admin/: README.md  app.js  index.html  styles.css
api/: schemas.py
app/: bot_helper.py  main.py  sheets.py  tasks.py  telegram.py
archive/: google_apps_script_complete.js  google_apps_script_promotions.js  memory_manager_sqlite.py  test_appeals.py  webhook_handler.py
config/: plugins.json  settings.py
data/: sheet_summary_tickets.json
db/: database.py  models.py
deployment_temp/: GOOGLE_APPS_SCRIPT_FULL.js  appeals_service.py  auth_service.py  bot.py  knowledge_base.py  project_auditor.py  promotions_api.py  requirements.txt  test_gemini_proxy.py
docs/: ACCORDION_PROMOTIONS_REPORT.md  ADR_TEMPLATE.md  API.md  API_CONTRACT.md  API_DOCUMENTATION.md  API_REFERENCE.md  ARCHITECTURAL_PRINCIPLES.md  ARCHITECTURE.md  ARCHITECTURE_V3.md  AUTH_FLOW.md  AUTO_DOCUMENTATION_SYSTEM.md  BOT_LOGIC.md  BUG_FIXES_REPORT.md  CHANGELOG.md  CHECKLIST_AND_ROADMAP.md  CHECKPOINT_v2.0.md  CI_CD.md  CODE_OF_CONDUCT.md  CODE_REFERENCE.md  CONTRIBUTING.md  CONVERSATION_LOG.md  DAILY_PROGRESS.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_GUIDE_RU.md  DEPLOY_CLOUD_RUN.md  DEPLOY_RUNBOOK.md  DEVELOPMENT_RULES.md  DOCUMENTATION_ANALYSIS.md  DOCUMENTATION_INDEX.md  ESCALATION_FEATURE.md  FEATURES.md  FINAL_DOCUMENTATION_REPORT.md  FUNCTIONAL_REQUIREMENTS.md  FUNCTIONS.md  GEMINI.md  GEMINI_PROXY_AMERICAN_SERVER.md  GOOGLE_APPS_SCRIPT_CODE.js  GOOGLE_APPS_SCRIPT_SETUP.md  GOOGLE_SHEETS.md  (+53 more)
handlers/: __init__.py  admin.py  analytics.py  appeals.py  auth.py  callback.py  chat.py  promotions.py  start_handler.py  utils.py
migrations/: migrate_appeals.py
monitors/: proxy_monitor.py
plugins/: auth.py  loader.py
rag/: document_processor.py  persistent_cache.py  persistent_rules.txt  search_engine.py
scripts/: README.md  check_bot_status.sh  check_server_version.sh  check_vm_sleep_policy.sh  deploy_and_test.sh  deploy_yandex.sh  fetch_sheets.py  generate_initdata.py  healthcheck_local.sh  install_cloudflare_tunnel.sh  long_term_stability_test.sh  rag_eval.py  (+27 more)
(+105 files in other folders)
